# coding_assistant

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR.md  DENSE_MODE.md  README.md  TODO.md  demo_new_architecture.py  justfile  main.py  pyproject.toml  requirements.txt  run.fish  tutorial.md
.plans/: chat_mode.md  interruptible-tool-plan.md
agents/: research.py
coding_assistant/: __main__.py  config.py  logging.py
coding_assistant/agents/: agents.py  developer.py  expert.py  orchestrator.py  planner.py  research.py  researcher.py
coding_assistant/tests/tools/: test_file.py
coding_assistant/tools/: agents.py  file.py  user.py
plans/: testing.md
src/coding_assistant/: __init__.py  __main__.py  cache.py  callbacks.py  config.py  default_instructions.md  dense_callbacks.py  history.py  instructions.py  logging.py  main.py  mcp.py  print_callbacks.py  rich_callbacks.py  sandbox.py  tools.py  ui.py
src/coding_assistant/agents/: agent.py  agents.py  callbacks.py  developer.py  engine.py  execution.py  expert.py  history.py  interrupts.py  logic.py  main_compat.py  orchestration.py  orchestrator.py  parameters.py  planner.py  prompt.py  registry.py  researcher.py  runner.py  test_agents.py  tools.py  types.py
src/coding_assistant/agents/tests/: helpers.py  test_agent_integration.py  test_agents.py  test_agents.py.bak  test_callbacks_integration.py  test_chat_loop_interrupts.py  test_chat_mode.py  test_execution.py  test_execution_shorten_conversation.py  test_execution_start_message.py  test_interrupts.py  test_model_contract.py  test_parameters.py  test_run_loop_slices.py  test_tools.py  test_vision.py
src/coding_assistant/llm/: adapters.py  model.py
src/coding_assistant/tests/: test_adapters.py  test_callbacks_confirmation.py  test_get_tools.py  test_history.py  test_history_public.py  test_instructions.py  test_instructions_public.py  test_llm_model.py  test_llm_model_public.py  test_mcp.py  test_sandbox.py  test_tools.py
src/coding_assistant/tests/tools/: test_file.py
src/coding_assistant/tools/: .null-ls_405400_tools.py  __init__.py  file.py  git_tools.py  mcp.py  notebook.py  tools.py
