[project]
name = "coding-assistant"
version = "0.1.0"
description = "Coding Assistant is an advanced Python-based project designed to streamline and automate various coding tasks."
readme = "README.md"
authors = []
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "mcp[cli]",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-sdk",
    "rich",
    "requests",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "landlock",
    "beeprint",
    "dataclasses-json>=0.6.7",
]

[tool.black]
line-length = 120

[project.scripts]
coding-assistant = "coding_assistant.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
