[project]
name = "coding-assistant"
version = "0.1.0"
description = "Coding Assistant is an advanced Python-based project designed to streamline and automate various coding tasks."
readme = "README.md"
authors = []
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "litellm[proxy]",
    "mcp[cli]",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-sdk",
    "rich",
    "requests",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "landlock",
    "beeprint",
    "pydantic",
    "debugpy",
    "pytest-timeout",
    "prompt-toolkit",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[project.scripts]
coding-assistant = "coding_assistant.main:main"
sandbox = "coding_assistant.sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
]
addopts = "--ignore=packages/coding_assistant_mcp/src/coding_assistant_mcp/tests"
